--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h4>Helping a local <br> business reinvent itself</h4>
+                        <h4 >Helping a local <br>  business reinvent itself</h4>
                         <p>We reached here with our hard work and dedication</p>
                     </div>
 
@@ -326,7 +326,9 @@
         <section class="Caring">
             <div class="text-center">
                 <h2>Caring is the new marketing</h2>
-                <p>The Nexcent blog is the best place to read about the latest membership insights,<br> trends and more. Seewho's joining the community, read about how our community <br> are increasing their membership income and lot's more.​</p>
+                <p>The Nexcent blog is the best place to read about the latest membership insights,<br> trends and more.
+                    Seewho's joining the community, read about how our community <br> are increasing their membership
+                    income and lot's more.​</p>
             </div>
 
             <div class="container">
@@ -334,30 +336,97 @@
                     <div class="col-md-4 text-center">
                         <img src="img/image 18.png" alt="imagem ">
                         <div class="text-translate">
-                        <p>Creating Streamlined Safeguarding Processes with OneRen</p>
-                        <h6><a href="#">Readmore <img src="imgs/icons/Right.svg" alt=""></a></h6>
+                            <p>Creating Streamlined Safeguarding Processes with OneRen</p>
+                            <h6><a href="#">Readmore <img src="img/icons/Right.svg" alt=""></a></h6>
                         </div>
                     </div>
 
                     <div class="col-md-4 text-center">
                         <img src="img/image 19.png" alt="imagem ">
                         <div class="text-translate">
-                        <p>What are your safeguarding responsibilities and how can you manage them?</p>
-                        <h6><a href="#">Readmore <img src="imgs/icons/Right.svg" alt=""></a></h6>
+                            <p>What are your safeguarding responsibilities and how can you manage them?</p>
+                            <h6><a href="#">Readmore <img src="img/icons/Right.svg" alt=""></a></h6>
                         </div>
                     </div>
-                
+
                     <div class="col-md-4 text-center">
                         <img src="img/image 20.png" alt="imagem ">
                         <div class="text-translate">
-                            <p>Revamping the Membership Model with Triathlon Australia</p>
-                            <h6><a href="#">Readmore <img src="imgs/icons/Right.svg" alt=""></a></h6>
-                            </div>
+                            <p>Revamping the Membership Model with Triathlon <br> Australia</p>
+                            <h6><a href="#">Readmore <img src="img/icons/Right.svg" alt=""></a></h6>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+
+        <section class="Pellentesque">
+            <div class="container text-center">
+                <h3>Pellentesque suscipit <br> fringilla libero eu.</h3>
+                <button class="btn btn-lg green-btn" type="button">Get a Demo <img src="img/icons/Right-2.svg"alt=""></button>
+            </div>
+        </section>
     </main>
+
+    <footer class="final mt-5">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="logo">
+                        <a href=""><img src="img/Logo-2.png" alt=""></a>
+                    </div>
+                    <p>Copyright © 2020 Nexcent ltd.<br> All rights reserved</p>
+                    <div class="social-midia">
+                        <a href="#"><img src="img/icons/Icons-ista.png" alt=""></a>
+                        <a href="#"><img src="img/icons/Icons-2.png" alt=""></a>
+                        <a href="#"><img src="img/icons/Icons-3.png" alt=""></a>
+                        <a href="#"><img src="img/icons/Icons-4.png" alt=""></a>
+                    </div>
+
+                </div>
+
+                <div class="col-md-8">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <h6>Company</h6>
+                                <ul>
+                                    <li><a href="#">About us</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">Contact us</a></li>
+                                    <li><a href="#">Pricing</a></li>
+                                    <li><a href="#">Testimonials</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="col-md-4">
+                                <h6>Support</h6>
+                                <ul>
+                                    <li><a href="#">Help center</a></li>
+                                    <li><a href="#">Terms of service</a></li>
+                                    <li><a href="#">Legal</a></li>
+                                    <li><a href="#">Privacy policy</a></li>
+                                    <li><a href="#">Status</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="col-md-4">
+                                <h6>Stay up to date</h6>
+                                <form action="#">
+                                    <input type="text" placeholder="Your email address">
+                                    <button class="translate-button">
+                                        <img class="incon" src="img/icons/send-7.png" alt="">
+                                    </button>
+
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
